# bt_api_giottus

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_giottus/: __init__.py  plugin.py  registry_registration.py
src/bt_api_giottus/errors/: __init__.py
src/bt_api_giottus/exchange_data/: __init__.py
src/bt_api_giottus/feeds/: __init__.py
src/bt_api_giottus/feeds/live_giottus/: request_base.py  spot.py
tests/containers/exchanges/: test_giottus_exchange_data.py
tests/feeds/: test_giottus_request_data.py
